<resources>
    <string name="app_logo">App Logo</string>
    <string name="about_description">A real-time note recording application with editing capabilities.</string>

    <string name="about_preparation">Before recording, set the key signature, time signature, and clefs.</string>
    <string name="about_processing">The app records notes in real time and displays them on a musical staff.</string>
    <string name="about_settings">Edit measures, add pauses, and correct notes where needed.</string>
    <string name="about_export">Export your sheet music as a JPEG file for easy printing and sharing.</string>
    <string name="app_name">Noten</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_log_in">Click to log in</string>
    <string name="click_on_register">Click on to register</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Navigation drawer</string>
    <string name="close_nav">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="projects">Projects</string>
    <string name="record_notes">Record notes</string>
    <string name="about_app">About app</string>
    <string name="noten">Noten</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="recorder_fragment">Recorder fragment</string>
    <string name="save_password">Save password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="save_nickname">Save nickname</string>
    <string name="change_avatar">Change avatar</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="enter_unique_nickname">Enter unique nickname</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="detected_note">Detected Note: -</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="choose_tonality">Choose tonality</string>
    <string name="choose_chord">Choose chord</string>
    <string name="detected_notes">Detected Notes</string>
    <string name="recording_part">Recording Part</string>
    <!-- Массив для ключей -->
        <string-array name="keys">
            <item>C</item>
            <item>C#</item>
            <item>D</item>
            <item>D#</item>
            <item>E</item>
            <item>F</item>
            <item>F#</item>
            <item>G</item>
            <item>G#</item>
            <item>A</item>
            <item>A#</item>
            <item>B</item>
            <item>Db</item>
            <item>Eb</item>
            <item>Fb</item>
            <item>Gb</item>
            <item>Ab</item>
            <item>Bb</item>
            <item>Cm</item>
            <item>D#m</item>
            <item>Fm</item>
            <item>Gm</item>
            <item>Am</item>
            <item>Bm</item>
        </string-array>
        <string-array name="meters">
            <item>4/4</item>
            <item>3/4</item>
            <item>6/8</item>
            <item>2/4</item>
            <item>5/4</item>
            <item>7/8</item>
            <item>9/8</item>
            <item>3/8</item>
            <item>12/8</item>
            <item>2/2</item>
            <item>5/8</item>
            <item>7/4</item>
            <item>4/2</item>
            <item>6/4</item>
        </string-array>
</resources>