<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_hom"
            android:icon="@drawable/home_24dp_e8eaed_fill0_wght400_grad0_opsz24"
            android:title="@string/projects"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_circle_24dp_e8eaed_fill0_wght400_grad0_opsz24"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/music_note_24dp_e8eaed_fill0_wght400_grad0_opsz24"
            android:title="@string/record_notes"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/error_24dp_e8eaed_fill0_wght400_grad0_opsz24"
                android:title="@string/about_app"/>
        </menu>
    </item>

</menu>