<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:text="@string/choose_tonality"/>
    <!-- Spinner for selecting key (tonality) -->
    <Spinner
        android:id="@+id/keySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:text="@string/choose_chord"/>
    <!-- Spinner for selecting chord -->
    <Spinner
        android:id="@+id/chordSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/detectedNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start recording"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="6dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/img_10"
        android:backgroundTint="@color/gold"
        android:padding="90dp"
        android:textColor="@color/gold"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:text="@string/stop_recording" />

    <TextView
        android:id="@+id/noteDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detected_note"
        android:backgroundTint="@color/gold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/gold"/>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
